Refactor into RoutableGraphTimingDriven