@@ -36,7 +36,6 @@ import com.xilinx.rapidwright.device.IntentCode;
 import com.xilinx.rapidwright.device.Node;
 import com.xilinx.rapidwright.device.PIP;
 import com.xilinx.rapidwright.device.TileTypeEnum;
-import com.xilinx.rapidwright.timing.TimingEdge;
 import com.xilinx.rapidwright.timing.TimingManager;
 import com.xilinx.rapidwright.timing.TimingVertex;
 import com.xilinx.rapidwright.timing.delayestimator.DelayEstimatorBase;
@@ -57,53 +56,54 @@ public class TimingAndWirelengthReport{
 	private DelayEstimatorBase estimator;
 	private Map<IntentCode, Long> nodeTypeUsage ;
 	private Map<IntentCode, Long> nodeTypeLength;
+	private RoutableGraph routingGraph;
 	
 	public TimingAndWirelengthReport(Design design, RWRouteConfig config) {
 		this.design = design;
-		this.timingManager = new TimingManager(this.design, true, null, config, RWRoute.createClkTimingData(config), this.design.getNets());
-	    this.estimator = new DelayEstimatorBase(this.design.getDevice(), new InterconnectInfo(), config.isUseUTurnNodes(), 0);
-		RoutableNode.setTimingDriven(true, this.estimator);
-		this.wirelength = 0;
-		this.usedNodes = 0;
-		this.nodeTypeUsage = new HashMap<>();
-		this.nodeTypeLength = new HashMap<>();
+		timingManager = new TimingManager(design, true, null, config, RWRoute.createClkTimingData(config), design.getNets());
+		estimator = new DelayEstimatorBase(design.getDevice(), new InterconnectInfo(), config.isUseUTurnNodes(), 0);
+		routingGraph = new RoutableGraphTimingDriven(null, estimator, config.isMaskNodesCrossRCLK());
+		wirelength = 0;
+		usedNodes = 0;
+		nodeTypeUsage = new HashMap<>();
+		nodeTypeLength = new HashMap<>();
 	}
 	
 	/**
 	 * Computes the wirelength and delay for each net and reports the total wirelength and critical path delay.
 	 */
 	private void computeStatisticsAndReport() {	
-		this.computeNetsWirelengthAndDelay();
+		computeNetsWirelengthAndDelay();
 		
-		Pair<Float, TimingVertex> maxDelayAndTimingVertex = this.timingManager.calculateArrivalRequireTimes();
+		Pair<Float, TimingVertex> maxDelayAndTimingVertex = timingManager.calculateArrivalRequireTimes();
 		System.out.println();
-		this.timingManager.getCriticalPathInfo(maxDelayAndTimingVertex, false, null);
+		timingManager.getCriticalPathInfo(maxDelayAndTimingVertex, false, routingGraph);
 		
 		System.out.println("\n");
-		System.out.println("Total nodes: " + this.usedNodes);
-		System.out.println("Total wirelength: " + this.wirelength);	
-		RWRoute.printNodeTypeUsageAndWirelength(true, this.nodeTypeUsage, this.nodeTypeLength);
+		System.out.println("Total nodes: " + usedNodes);
+		System.out.println("Total wirelength: " + wirelength);
+		RWRoute.printNodeTypeUsageAndWirelength(true, nodeTypeUsage, nodeTypeLength);
 	}
 	
 	/**
 	 * Computes the wirelength and delay for each net.
 	 */
 	private void computeNetsWirelengthAndDelay() {
-		for(Net net : this.design.getNets()) {
+		for(Net net : design.getNets()) {
 			if (net.getType() != NetType.WIRE) continue;
 			if(!RouterHelper.isRoutableNetWithSourceSinks(net)) continue;
 			if(net.getSource().toString().contains("CLK")) continue;
-			NetWrapper netplus = this.createNetWrapper(net);		
+			NetWrapper netplus = createNetWrapper(net);
 			List<Node> netNodes = RouterHelper.getNodesOfNet(net);			
 			for(Node node:netNodes){	
 				if(node.getTile().getTileTypeEnum() != TileTypeEnum.INT) continue;
 				usedNodes++;	
 				int wl = RouterHelper.getLengthOfNode(node);	
-				this.wirelength += wl;
-				RouterHelper.addNodeTypeLengthToMap(node, wl, this.nodeTypeUsage, this.nodeTypeLength);	
+				wirelength += wl;
+				RouterHelper.addNodeTypeLengthToMap(node, wl, nodeTypeUsage, nodeTypeLength);
 			}			
-			this.timingManager.setTimingEdgesOfConnections(netplus.getConnections());
-			this.setAccumulativeDelayOfEachNetNode(netplus);
+			timingManager.setTimingEdgesOfConnections(netplus.getConnections());
+			setAccumulativeDelayOfEachNetNode(netplus);
 		}
 	}
 	
@@ -113,7 +113,7 @@ public class TimingAndWirelengthReport{
 	 * @return
 	 */
 	private NetWrapper createNetWrapper(Net net) {
-		NetWrapper netWrapper = new NetWrapper(this.numWireNetsToRoute++, net);			
+		NetWrapper netWrapper = new NetWrapper(numWireNetsToRoute++, net);
 		SitePinInst source = net.getSource();
 		Node sourceINTNode = null;
 		for(SitePinInst sink:net.getSinkPins()){
@@ -124,16 +124,16 @@ public class TimingAndWirelengthReport{
 					 throw new IllegalArgumentException(errMsg);
 				}
 			}
-			Connection connection = new Connection(this.numConnectionsToRoute++, source, sink, netWrapper);	
+			Connection connection = new Connection(numConnectionsToRoute++, source, sink, netWrapper);
 			List<Node> nodes = RouterHelper.projectInputPinToINTNode(sink);
 			if(nodes.isEmpty()) {	
 				connection.setDirect(true);
 			}else {
-				connection.setSinkRnode(new RoutableNode(nodes.get(0), RoutableType.PINFEED_I));
+				connection.setSinkRnode(routingGraph.create(nodes.get(0), RoutableType.PINFEED_I).getFirst());
 				if(sourceINTNode == null) {
 					sourceINTNode = RouterHelper.projectOutputPinToINTNode(source);
 				}
-				connection.setSourceRnode(new RoutableNode(sourceINTNode, RoutableType.PINFEED_O));
+				connection.setSourceRnode(routingGraph.create(sourceINTNode, RoutableType.PINFEED_O).getFirst());
 				connection.setDirect(false);
 			}
 		}
@@ -161,7 +161,7 @@ public class TimingAndWirelengthReport{
 			endrn.setPrev(startrn);
 			float delay = 0;
 			if(endNode.getTile().getTileTypeEnum() == TileTypeEnum.INT) {
-				delay = RouterHelper.computeNodeDelay(this.estimator, endrn.getNode())
+				delay = RouterHelper.computeNodeDelay(estimator, endrn.getNode())
 						+ DelayEstimatorBase.getExtraDelay(endNode, DelayEstimatorBase.isLong(startNode));
 			}
 			endrn.setDelayFromSource(startrn.getDelayFromSource() + delay);
